<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mctech.stocktradetracking.feature.stock_share.StockShareViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlShareCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_code"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etShareCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:textAllCaps="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlShareAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/share_amount"
            app:layout_constraintTop_toBottomOf="@id/tlShareCode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etShareAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSharePrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/share_price"
            app:layout_constraintTop_toBottomOf="@id/tlShareAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSharePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemInvestment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/investment"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintTop_toBottomOf="@id/tlSharePrice"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemInvestmentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/itemInvestment"
            tools:text="R$8.981,00" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btBuy"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_position"
            app:layout_constraintTop_toBottomOf="@id/itemInvestmentAmount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>