<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/item"
            layout="@layout/item_stock_share_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlShareAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/split_ratio"
            app:helperText="How is the split ratio? E.g: 1 to 4"
            app:layout_constraintTop_toBottomOf="@id/item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etShareAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:lines="1"
                android:maxLength="2"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSharePrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/split_price"
            app:layout_constraintEnd_toEndOf="@+id/tlShareAmount"
            app:layout_constraintStart_toStartOf="@+id/tlShareAmount"
            app:layout_constraintTop_toBottomOf="@id/tlShareAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSharePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSplit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/split_position"
            app:layout_constraintEnd_toEndOf="@+id/tlSharePrice"
            app:layout_constraintStart_toStartOf="@+id/tlSharePrice"
            app:layout_constraintTop_toBottomOf="@id/tlSharePrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>